--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,6 +6,9 @@ analyzer:
     strict-inference: true
     strict-raw-types: true
 
+formatter:
+  page_width: 120
+
 linter:
   rules:
     - always_declare_return_types
@@ -14,7 +17,6 @@ linter:
     - comment_references
     - one_member_abstracts
     - only_throw_errors
-    - package_api_docs
     - prefer_final_in_for_each
     - prefer_final_locals
     - prefer_single_quotes
