--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         # run: dart format --output=none --set-exit-if-changed .
       
       - name: Analyze project source
-        run: dart analyze
+        run: dart analyze lib test
       
       - name: Run unit tests
         run: dart test --exclude-tags=integration
